--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
       </div>
       <div class="header__right-block">
-        <button class="btn btn_white">Связаться с нами</button>
+        <button data-modal class="btn btn_white">Связаться с нами</button>
       </div>
     </header>
     <div class="sidepanel">
@@ -53,7 +53,7 @@
               фрукты - ресторанное меню без похода в ресторан!
             </div>
           </div>
-          -->
+
           <div class="tabcontent">
             <img src="img/tabs/post.jpg" alt="post" />
             <div class="tabcontent__descr">
@@ -71,7 +71,7 @@
               в к/б/ж/у и создаем лучшие блюда для вас.
             </div>
           </div>
-          -->
+
           <div class="tabheader">
             <h3>Выберите стиль питания</h3>
             <div class="tabheader__items">
@@ -102,7 +102,7 @@
           </div>
         </div>
         <div class="offer__action">
-          <button class="btn btn_dark">Связаться с нами</button>
+          <button data-modal class="btn btn_dark">Связаться с нами</button>
         </div>
       </div>
       <div class="container">
@@ -226,51 +226,7 @@
       <h2 class="title">Наше меню на день</h2>
 
       <div class="menu__field">
-        <div class="container">
-          <div class="menu__item">
-            <img src="img/tabs/vegy.jpg" alt="vegy" />
-            <h3 class="menu__item-subtitle">Меню "Фитнес"</h3>
-            <div class="menu__item-descr">
-              Меню "Фитнес" - это новый подход к приготовлению блюд: больше
-              свежих овощей и фруктов. Продукт активных и здоровых людей. Это
-              абсолютно новый продукт с оптимальной ценой и высоким качеством!
-            </div>
-            <div class="menu__item-divider"></div>
-            <div class="menu__item-price">
-              <div class="menu__item-cost">Цена:</div>
-              <div class="menu__item-total"><span>229</span> грн/день</div>
-            </div>
-          </div>
-          <div class="menu__item">
-            <img src="img/tabs/elite.jpg" alt="elite" />
-            <h3 class="menu__item-subtitle">Меню “Премиум”</h3>
-            <div class="menu__item-descr">
-              В меню “Премиум” мы используем не только красивый дизайн упаковки,
-              но и качественное исполнение блюд. Красная рыба, морепродукты,
-              фрукты - ресторанное меню без похода в ресторан!
-            </div>
-            <div class="menu__item-divider"></div>
-            <div class="menu__item-price">
-              <div class="menu__item-cost">Цена:</div>
-              <div class="menu__item-total"><span>550</span> грн/день</div>
-            </div>
-          </div>
-          <div class="menu__item">
-            <img src="img/tabs/post.jpg" alt="post" />
-            <h3 class="menu__item-subtitle">Меню "Постное"</h3>
-            <div class="menu__item-descr">
-              Меню “Постное” - это тщательный подбор ингредиентов: полное
-              отсутствие продуктов животного происхождения, молоко из миндаля,
-              овса, кокоса или гречки, правильное количество белков за счет тофу
-              и импортных вегетарианских стейков.
-            </div>
-            <div class="menu__item-divider"></div>
-            <div class="menu__item-price">
-              <div class="menu__item-cost">Цена:</div>
-              <div class="menu__item-total"><span>430</span> грн/день</div>
-            </div>
-          </div>
-        </div>
+        <div class="container"></div>
       </div>
     </div>
 
@@ -314,7 +270,7 @@
           </div>
         </div>
         <div class="promotion__timer">
-          <div class="title">Осталось до конца акции:</div>
+          <div class="title">До рыбалки осталось:</div>
           <div class="timer">
             <div class="timer__block">
               <span id="days">12</span>
@@ -359,7 +315,7 @@
       <div class="modal__dialog">
         <div class="modal__content">
           <form action="#">
-            <div class="modal__close">&times;</div>
+            <div data-close class="modal__close">&times;</div>
             <div class="modal__title">
               Мы свяжемся с вами как можно быстрее!
             </div>
